@@ -400,7 +400,7 @@ ext["rest-assured.version"] = '5.1.0'
 
 dependencyManagement {
     dependencies {
-        dependency 'org.apache.httpcomponents.core5:httpcore5:5.4.1'
+        dependency 'org.apache.httpcomponents.core5:httpcore5:5.4.2'
         dependencySet(group: 'com.google.guava', version: '33.4.8-jre') {
             entry 'guava'
         }
@@ -433,7 +433,7 @@ dependencies {
     implementation project(':et-shared')
     implementation group: 'uk.gov.dwp.regex', name: 'postcode-validation', version: '1.1.0'
     implementation group: 'com.github.hmcts', name: 'core-case-data-store-client', version: '4.9.2'
-    implementation group: 'com.github.hmcts', name: 'idam-java-client', version: '3.0.4'
+    implementation group: 'com.github.hmcts', name: 'idam-java-client', version: '3.0.5'
     implementation group: 'com.github.hmcts', name: 'service-auth-provider-java-client', version: '4.1.2'
     implementation group: 'com.github.hmcts', name: 'ccd-case-document-am-client', version: '1.59.2'
     implementation group: 'com.github.hmcts', name: 'document-management-client', version: '7.0.1'
@@ -448,12 +448,12 @@ dependencies {
 
     implementation group: 'commons-io', name: 'commons-io', version: '2.21.0'
     implementation group: 'commons-fileupload', name: 'commons-fileupload', version: '1.6.0'
-    implementation group: 'io.netty', name: 'netty-tcnative-classes', version: '2.0.74.Final'
+    implementation group: 'io.netty', name: 'netty-tcnative-classes', version: '2.0.75.Final'
     implementation group: 'org.json', name: 'json', version: '20250107'
     implementation group: 'org.apache.commons', name: 'commons-compress', version: '1.28.0'
     implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.18.0'
     implementation group: 'org.apache.httpcomponents.client5', name: 'httpclient5', version: '5.5.1'
-    implementation group: 'org.apache.httpcomponents.core5', name: 'httpcore5', version: '5.4.1'
+    implementation group: 'org.apache.httpcomponents.core5', name: 'httpcore5', version: '5.4.2'
     implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: log4JVersion
     implementation group: 'org.apache.logging.log4j', name: 'log4j-to-slf4j', version: log4JVersion
     implementation group: 'org.apache.pdfbox', name: 'pdfbox', version: '3.0.0-RC1'
@@ -464,7 +464,7 @@ dependencies {
     //To Remove vulnerability CVE-2020-11988
     implementation group: 'org.apache.xmlgraphics', name: 'xmlgraphics-commons', version: '2.11'
     implementation group: 'org.flywaydb', name: 'flyway-core', version: '9.22.3'
-    implementation group: 'org.postgresql', name: 'postgresql', version: '42.7.7'
+    implementation group: 'org.postgresql', name: 'postgresql', version: '42.7.10'
     implementation group: 'org.slf4j', name: 'slf4j-ext', version: '2.0.17'
     implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.5.0'
     implementation 'org.springframework.boot:spring-boot-configuration-processor'
@@ -494,8 +494,16 @@ dependencies {
     implementation 'jakarta.annotation:jakarta.annotation-api:2.1.1'
     implementation group: 'com.launchdarkly', name: 'launchdarkly-java-server-sdk', version: '7.10.2'
 
+    implementation group: 'com.github.hmcts', name: 'befta-fw', version: '9.2.4', {
+        exclude group: 'org.apache.commons', module: 'commons-compress'
+        exclude group: 'com.google.guava', module: 'guava'
+        exclude group: 'org.apache.poi', module: 'poi-ooxml'
+        exclude group: 'org.apache.poi', module: 'poi'
+        exclude group: 'com.launchdarkly', module: 'launchdarkly-java-server-sdk'
+        exclude group: 'org.codehaus.groovy', module: 'groovy-xml'
+    }
     // CVE-2025-7962
-    implementation group: 'org.eclipse.angus', name: 'angus-mail', version: '2.0.4'
+    implementation group: 'org.eclipse.angus', name: 'angus-mail', version: '2.0.5'
 
     runtimeOnly group: 'com.squareup.okio', name: 'okio-jvm', version: '3.16.4'
     compileOnly 'org.projectlombok:lombok'
@@ -524,8 +532,8 @@ dependencies {
     testRuntimeOnly group: 'org.junit.platform', name: 'junit-platform-engine', version: junitPlatformVersion
     testRuntimeOnly group: 'org.junit.platform', name: 'junit-platform-commons', version: junitPlatformVersion
     testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test'
-    testImplementation group: 'org.testcontainers', name: 'postgresql', version: '1.21.3'
-    testImplementation group: 'org.assertj', name: 'assertj-core', version: '3.27.4'
+    testImplementation group: 'org.testcontainers', name: 'postgresql', version: '1.21.4'
+    testImplementation group: 'org.assertj', name: 'assertj-core', version: '3.27.7'
     testImplementation group: 'nl.jqno.equalsverifier', name: 'equalsverifier', version: '3.17.5'
     // Mockito 5.0.0+ has merged mockito-inline into mockito-core
     testImplementation group: 'org.mockito', name: 'mockito-core', version: '5.19.0'
@@ -619,6 +627,12 @@ bootWithCCD {
     //environment 'SERVICEBUS_FAKE', 'true'*
     environment 'CFTLIB_EXTRA_COMPOSE_FILES', ''
 
+}
+
+tasks.register('highLevelDataSetup', JavaExec) {
+    mainClass = "uk.gov.hmcts.ethos.replacement.docmosis.config.HighLevelDataSetupConfiguration"
+    classpath += sourceSets.main.runtimeClasspath
+    jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
 }
 
 pmdMain.maxFailures = 0
